# gtm-agency-os-starter

./: .env.example  .gitignore  AUDIT_REPORT_TEMPLATE.md  BRAND_GUIDELINES.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: plugin.json
.github/: dependabot.yml
.github/workflows/: eval-gate.yml  security.yml
agents/: audit-mapper.md  campaign-drafter.md  daily-digest.md  inbound-triage.md  weekly-review.md
clients/_example/: client.md
clients/_example/campaigns/: jrs-q2.md
commands/: ops.md
docs/: PATTERNS.md  STACK_OVERRIDES.md
evals/: audit-mapper.yaml  campaign-drafter.yaml  daily-digest.yaml  inbound-triage.yaml  weekly-review.yaml
gtmos/: __init__.py  agents.py  brain.py  cli.py  clients.py  config.py  judge.py  llm.py  multi_tenant.py  routines.py  runs.py  security.py  skill_bridge.py  slack_app.py  tasks.py  webhooks.py
gtmos/connectors/: __init__.py  base.py  discovery.py  hubspot.py  lemlist.py  slack.py
gtmos/pipelines/: __init__.py  inbound_triage.py  weekly_review.py
hooks/: install.sh  pre-commit  pre-push
routines/: daily-digest.md  inbound-triage-cron.md  per-client-weekly-review.md  task-cron.md
scripts/: hubspot_smoke.py  run-evals.sh  slack_smoke.py  verify.sh
tests/: conftest.py  test_agents_brain.py  test_brain_bridge.py  test_cli.py  test_clients.py  test_config.py  test_connectors_base.py  test_connectors_hubspot.py  test_connectors_slack.py  test_connectors_stubs.py  test_judge.py  test_lemlist.py  test_llm_judge.py  test_multi_tenant.py  test_pipelines.py  test_routines.py  test_runs.py  test_security.py  test_skill_bridge.py  test_slack_app.py  test_tasks.py  test_webhook_dispatchers.py  test_webhooks.py
