[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "gtmos"
version = "0.3.0"
description = "GTM Agency OS — doctrine + agents + eval harness + real HubSpot/Slack pipelines + sqlite task cron."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "kai8karma", email = "kai8karma@gmail.com" }]
keywords = ["gtm", "b2b", "outbound", "claude-code", "agency", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
]

dependencies = [
  "anthropic>=0.40,<1.0",
  "pyyaml>=6.0,<7.0",
  "python-frontmatter>=1.1,<2.0",
  "pydantic>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
  "slack-bolt>=1.20,<2.0",
  "slack-sdk>=3.31,<4.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0",
  "pytest-cov>=5.0,<7.0",
  "pytest-asyncio>=0.23,<2.0",
  "respx>=0.21,<1.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
  "bandit[toml]>=1.7,<2.0",
  "pip-audit>=2.7,<3.0",
  "types-PyYAML",
]

[project.scripts]
gtmos = "gtmos.cli:main"

[project.urls]
Homepage = "https://github.com/Kai8karma/gtm-agency-os-starter"
Repository = "https://github.com/Kai8karma/gtm-agency-os-starter"
Issues = "https://github.com/Kai8karma/gtm-agency-os-starter/issues"

[tool.hatch.build.targets.wheel]
packages = ["gtmos"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
  "slow: tests that hit the network or take > 1s",
  "integration: require external services (Slack, Anthropic API)",
]

[tool.coverage.run]
branch = true
source = ["gtmos"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["clients/_example", "runs"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",             # isort
  "B",             # bugbear
  "S",             # bandit-lite (flake8-bandit)
  "UP",            # pyupgrade
  "C4",            # comprehensions
  "PIE",           # misc
  "PT",            # pytest style
  "SIM",           # simplify
  "ARG",           # unused args
  "PTH",           # use pathlib
  "RUF",           # ruff-specific
]
ignore = [
  "E501",  # line length handled by formatter
  "S101",  # asserts in tests are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S311", "ARG"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_decorators = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["frontmatter.*", "slack_bolt.*", "slack_sdk.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "clients"]
skips = ["B101"]  # asserts ok; we use them defensively
